--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,26 +17,26 @@
         android:theme="@style/Theme.FineFettle"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity7"
+            android:name=".Set_Alarm"
             android:exported="false" />
         <activity
             android:name=".MainActivity6"
             android:exported="false" />
         <activity
-            android:name=".MainActivity5"
+            android:name=".Loader"
             android:exported="false"
             android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar" />
         <activity
-            android:name=".MainActivity4"
+            android:name=".No_use"
             android:exported="true" />
         <activity
-            android:name=".MainActivity3"
+            android:name=".Home"
             android:exported="true" />
         <activity
-            android:name=".MainActivity2"
+            android:name=".Signup"
             android:exported="true" />
         <activity
-            android:name=".MainActivity"
+            android:name=".Login_main"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
